--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
+    "cors": "^2.8.5",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "postcss": "^8",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
     "prisma": "^5.20.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.13"
   }
 }
